--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -13,6 +13,10 @@
                     <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
                     <span *ngIf="isExpanded">Home</span>        
                 </mat-list-item>
+                <mat-list-item >
+                    <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
+                    <span *ngIf="isExpanded" (click)="openDialog()">File</span>        
+                </mat-list-item>
             </mat-nav-list>
         </div>
         <div class="container">
