--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -4,25 +4,119 @@
             Desenho
         </div>
         <div style="width: 100%; height: 100%;">
-        <div class="sidenav-container" >
-            <mat-nav-list style="width: auto;">
-                <mat-list-item>
-                   <mat-icon mat-list-icon class="sidenav-button" (click)="isExpanded = !isExpanded" [ngClass]="{'rotated':isExpanded}">chevron_right</mat-icon> 
-                </mat-list-item>  
-                <mat-list-item >
-                    <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
-                    <span *ngIf="isExpanded">Home</span>        
-                </mat-list-item>
-                <mat-list-item >
-                    <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
-                    <span *ngIf="isExpanded" (click)="openDialog()">File</span>        
-                </mat-list-item>
-            </mat-nav-list>
+            <div class="sidenav-container" >
+                <mat-nav-list style="width: auto;">
+                    <mat-list-item>
+                    <mat-icon mat-list-icon class="sidenav-button" (click)="isExpanded = !isExpanded" [ngClass]="{'rotated':isExpanded}">chevron_right</mat-icon> 
+                    </mat-list-item>  
+                    <mat-list-item >
+                        <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
+                        <span *ngIf="isExpanded">Home</span>        
+                    </mat-list-item>
+                    <mat-list-item >
+                        <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
+                        <span *ngIf="isExpanded" (click)="openDialog()">File</span>        
+                    </mat-list-item>
+                </mat-nav-list>
+            </div>
+            <div class="container">          
+                <div class="wrapper">
+                    <div class="box-field"> 
+                        <h3>GERENCIAR MUNICIPIO</h3>
+                    </div>
+                    <div class="box-field"> 
+                        <div style="width: auto;">
+                            <label>Buscar Municipio </label>
+                        </div>                   
+                        <input class="input-filter" type="text">
+                    </div>
+                    <div class="box-field">                  
+                        <label >Código UF </label>
+                        <input class="input-filter-secondary" type="text">  
+                        <button mat-icon-button> 
+                            <mat-icon >menu</mat-icon>
+                        </button>  
+                    </div>
+                    <div >
+                        <button class="button-event"> 
+                            <mat-icon >home</mat-icon> 
+                            ShapeFiles Municipios
+                        </button>                   
+                    </div>
+                    <div >
+                        <button class="button-event"> 
+                            <mat-icon >home</mat-icon> 
+                            Manipular Limites Municipais
+                        </button>  
+                    </div>
+                    <div >
+                        <button class="button-event"> 
+                            <mat-icon >home</mat-icon> 
+                            Buscar Limites Municipais
+                        </button>  
+                    </div>
+                </div> 
+            </div>
+            <div class="container">          
+                <div class="wrapper-table">
+                    <div class="box-table"> 
+                        <h3>MUNICIPIO SELEIONADO</h3>
+                    </div>
+                    <div class="box-table"> 
+                        <label >Identificador:</label>
+                        <label >01</label>
+                    </div>
+                    <div class="box-table-l">                  
+                        <label >Cod Estado:</label>
+                        <label >01</label>
+                    </div>   
+                    <div class="box-table-r">                  
+                        <label >Sigla:</label>
+                        <label >01</label>
+                    </div>    
+                    <div class="box-table"> 
+                        <label >Nome:</label>
+                        <label >01</label>
+                    </div>  
+                    <div class="box-table-l">                  
+                        <label >Cod IBGE:</label>
+                        <label >01</label>
+                    </div>   
+                    <div class="box-table-r">                  
+                        <label >Ambiental:</label>
+                        <label >01</label>
+                    </div>    
+                    <div class="box-table"> 
+                        <label >Area:</label>
+                        <label >01</label>
+                    </div>        
+                </div>
+            </div>
+            <div class="container">  
+                <div class="wrapper">
+                    <div >
+                            <button class="button-event"> 
+                                <mat-icon >home</mat-icon> 
+                                ShapeFiles Municipios
+                            </button>                   
+                        </div>
+                        <div >
+                            <button class="button-event"> 
+                                <mat-icon >home</mat-icon> 
+                                Manipular Limites Municipais
+                            </button>  
+                        </div>
+                        <div >
+                            <button class="button-event"> 
+                                <mat-icon >home</mat-icon> 
+                                Buscar Limites Municipais
+                            </button>  
+                        </div>
+                    </div> 
+                </div>
+
         </div>
-        <div class="container">
-            <p>home-page works!</p>
-        </div>
-        </div>
+        
     </mat-drawer>
     <mat-drawer-content>
       <div class="content">
