--- a/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.css
+++ b/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.css
@@ -16,7 +16,7 @@
 .map-container {
 
     width: 100%;
-    height: 400px;
+    height: 100%;   
     display: block;
     margin: 0 auto;
     flex-grow: 1; 
