--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.scss
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.scss
@@ -109,3 +109,9 @@ mat-drawer-container {
     width: 55%;
     background-color: blue;
 }
+.map-container-area{
+    width: 100%;
+    height: 100%;   
+    overflow: hidden;
+    background-color: #010a22;    
+}
