--- a/frontendSIGUI/src/app/components/angular-components/geodata/tables/table-county/table-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/tables/table-county/table-county.component.html
@@ -4,11 +4,11 @@
     </div>
     <div class="box-table"> 
         <label >Identificador:</label>
-        <label >01</label>
+        <label >{{county.id}}</label>
     </div>
     <div class="box-table-l">                  
         <label >Cod Estado:</label>
-        <label >01</label>
+        <label >{{county.id}}</label>
     </div>   
     <div class="box-table-r">                  
         <label >Sigla:</label>
