--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -20,44 +20,9 @@
                 </mat-nav-list>
             </div>
             <div class="container">          
-                <div class="wrapper">
-                    <div class="box-field"> 
-                        <h3>GERENCIAR MUNICIPIO</h3>
-                    </div>
-                    <div class="box-field"> 
-                        <div style="width: auto;">
-                            <label>Buscar Municipio </label>
-                        </div>                   
-                        <input class="input-filter" type="text">
-                    </div>
-                    <div class="box-field">                  
-                        <label >Código UF </label>
-                        <input class="input-filter-secondary" type="text">  
-                        <button mat-icon-button> 
-                            <mat-icon >menu</mat-icon>
-                        </button>  
-                    </div>
-                    <div >
-                        <button class="button-event"> 
-                            <mat-icon >home</mat-icon> 
-                            ShapeFiles Municipios
-                        </button>                   
-                    </div>
-                    <div >
-                        <button class="button-event"> 
-                            <mat-icon >home</mat-icon> 
-                            Manipular Limites Municipais
-                        </button>  
-                    </div>
-                    <div >
-                        <button class="button-event"> 
-                            <mat-icon >home</mat-icon> 
-                            Buscar Limites Municipais
-                        </button>  
-                    </div>
-                </div> 
+                <app-manipulate-county></app-manipulate-county>
             </div>
-            <div class="container">          
+            <div class="container" *ngIf="managerVizualizaton.session_county">          
                 <app-table-county></app-table-county>
             </div>
             <div class="container">  
@@ -76,14 +41,13 @@
                     </div>
                 </div> 
             </div>
-
         </div>
         
     </mat-drawer>
     <mat-drawer-content>
         <div class="map-container-area">
             <div style="width: 100%; height: 100%;display: inline-block;">
-                <app-open-layer></app-open-layer>
+                <app-open-layer #mapOpenLayer></app-open-layer>
             </div>
         </div>
         <div class="button-extends-options">
@@ -91,7 +55,7 @@
             <mat-icon mat-list-icon class="" (click)="isShowing = !isShowing">grid_on</mat-icon> 
         </button>
         </div>
-        <div class="button-extends-options-right">
+        <div class="button-extends-options-right"  *ngIf="isShowingButtonNavRight">
             <button>
                 <mat-icon mat-list-icon class="" (click)="isShowingNavRight = !isShowingNavRight">grid_on</mat-icon> 
             </button>
@@ -99,12 +63,8 @@
  
     </mat-drawer-content>
     <mat-drawer class="sidenav-container-right" mode="side" position="end" [opened]="isShowingNavRight">
-        <!-- <div class="subtitle-nav">
-            Desenho
-        </div> -->
-        <app-manage-county></app-manage-county>
+        <div class="container" *ngIf="managerManipulation.session_county">          
+            <app-manage-county></app-manage-county>
+        </div>
     </mat-drawer>
-  
-
-
 </mat-drawer-container>
