--- a/frontendSIGUI/src/app/components/angular-components/navheadersigui/navheadersigui.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/navheadersigui/navheadersigui.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" [class.mat-elevation-z2]="true" [class.mat-elevation-z8]="true" >
     <button mat-icon-button class="nav-button" (click)="onClickNav()" aria-label="Acessar Opcoes do Menu">
         <mat-icon>menu</mat-icon>
     </button>
