--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulate-county/manipulate-county.component.scss
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulate-county/manipulate-county.component.scss
@@ -1,3 +1,9 @@
+@import '../../../../../../../node_modules/@angular/material/theming';
+@include mat-core();
+@import '../../../../../../styles.scss';
+$primary : map-get($custom-theme , primary);
+$accent : map-get($custom-theme , accent);
+
 .wrapper{
     margin-top: 20px;
     display: grid;
