--- a/frontendSIGUI/src/app/layout/home-page/home-page.component.html
+++ b/frontendSIGUI/src/app/layout/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-<header>
+<header class="header-menu">
     <app-navheadersigui (ActiveSideNav)="activeSideNav()"></app-navheadersigui>
 </header>
-<mat-sidenav-container autosize>
-    <mat-sidenav #sidenav mode="side" [opened]="isShowing">
+<mat-sidenav-container style="top: 65px;" autosize>
+    <mat-sidenav class="man" #sidenav mode="side" [opened]="isShowing">
         <mat-nav-list>
             <mat-list-item>
                <mat-icon mat-list-icon class="expanded-button sidenav-button" (click)="isExpanded = !isExpanded" [ngClass]="{'rotated':isExpanded}">chevron_right</mat-icon> 
@@ -25,8 +25,9 @@
             <mat-divider></mat-divider>       
         </mat-nav-list>
     </mat-sidenav>
-    <div style="height: 100%;">
-        <app-geo-data></app-geo-data>      
+    <div style="height: 100%;">       
+
+       <app-geo-data></app-geo-data>   
     </div>
 
     <!-- <div class="content">
