--- a/frontendSIGUI/src/styles.scss
+++ b/frontendSIGUI/src/styles.scss
@@ -1,8 +1,9 @@
 @import '../node_modules/@angular/material/theming';
+// @import '../material-design-icons/iconfont/material-icons.css';
 @include mat-core();
 
 $custom-app-primary: mat-palette($mat-indigo,900,900,900);
-$custom-app-secondary: mat-palette($mat-gray,50);
+$custom-app-secondary: mat-palette($mat-indigo,700,700,700);
 $custom-app-warn: mat-palette($mat-red);
 
 $custom-theme: mat-light-theme($custom-app-primary,$custom-app-secondary,$custom-app-warn);
@@ -18,7 +19,7 @@ $custom-theme: mat-light-theme($custom-app-primary,$custom-app-secondary,$custom
         disabled-button:   rgba($color, 0.38),
         disabled-text:   rgba(255,255,255),
         hint-text:       rgba(255,255,255),
-        secondary-text:  rgba(255,255,255),
+        secondary-text:  rgba(151, 28, 28),
         icon:            rgba(255,255,255),
         icons:           rgba(255,255,255),
         text:            rgba(0,0,0),
@@ -92,7 +93,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     list-style: none;
     text-decoration: none;
     // color: black;
-    font-family: 'Roboto';
+   // font-family: 'Roboto';
 }
 
 
