--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulate-county/manipulate-county.component.scss
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulate-county/manipulate-county.component.scss
@@ -18,3 +18,11 @@ $accent : map-get($custom-theme , accent);
     grid-column-end: 4;
    
 }
+.button-colum{
+    text-align: center;
+}
+
+.divider-div{
+    width: 250px;
+    height: 10px;
+}
