--- a/frontendSIGUI/src/app/components/maps-components/selectLayers/select-unit-poligono/select-unit-poligono.component.css
+++ b/frontendSIGUI/src/app/components/maps-components/selectLayers/select-unit-poligono/select-unit-poligono.component.css
@@ -4,8 +4,15 @@
 
 
 .componets-horizontal{
-    float: left;
+    float: left; 
 }
+
+.button-mat-control{
+    padding-top: 10px;
+    margin-right: 10px;
+    
+}
+
 .componets-horizontal label,input,button,select {
     display: block;
 }
