--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -1,10 +1,10 @@
 <mat-drawer-container autosize>
-    <mat-drawer #drawer class="nav-container" mode="side" position="start" [opened]="isShowing">
-        <div class="subtitle-nav">
-           <mat-label secondary-text class="secondary-text">Teste</mat-label>
+    <mat-drawer #drawer class="nav-container " mode="side" position="start" [opened]="isShowing">
+        <div class="subtitle-nav header-light-pallete">
+           <h2 class="secondary-text ">GEODADOS</h2>
         </div>
         <div style="width: 100%; height: 100%;">
-            <div class="sidenav-container" >
+            <div class="sidenav-container color-pallete" >
                 <mat-nav-list style="width: auto;">
                     <mat-list-item>
                     <mat-icon mat-list-icon class="sidenav-button" (click)="isExpanded = !isExpanded" [ngClass]="{'rotated':isExpanded}">chevron_right</mat-icon> 
@@ -19,27 +19,31 @@
                     </mat-list-item>
                 </mat-nav-list>
             </div>
-            <div class="container">          
-                <app-manipulate-county></app-manipulate-county>
-            </div>
-            <div class="container" *ngIf="managerVizualizaton.session_county">          
-                <app-table-county></app-table-county>
-            </div>
-            <div class="container">  
-                <div class="wrapper-manipulation">
-                    <div class="box-field-ex">
-                        <button class="button-event">
-                            <mat-icon >home</mat-icon> 
-                            Excluir Municipios
-                        </button>  
-                    </div>
-                    <div class="box-field-ed">
-                        <button class="button-event">
-                            <mat-icon >home</mat-icon> 
-                            Editar Municipios
-                        </button>  
-                    </div>
-                </div> 
+            <div class="container-div">                
+                <div class="container">          
+                    <app-manipulate-county></app-manipulate-county>                    
+                </div>
+               
+                <div class="container" *ngIf="managerVizualizaton.session_county">          
+                    <app-table-county></app-table-county>
+                </div>
+                <div class="container">  
+                    
+                    <div class="wrapper-manipulation">
+                        <div class="box-field-ex">
+                            <button mat-flat-button class="button-control-data" color="primary" > 
+                                <mat-icon >home</mat-icon><br> 
+                                <span>Excluir Municipios</span>           
+                            </button>   
+                        </div>
+                        <div class="box-field-ed">
+                            <button mat-flat-button class="button-control-data" color="primary" > 
+                                <mat-icon >home</mat-icon><br> 
+                                <span> Editar Municipios</span>           
+                            </button>               
+                        </div>
+                    </div> 
+                </div>
             </div>
         </div>
         
