--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.scss
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.scss
@@ -8,7 +8,7 @@ $accent : map-get($custom-theme , accent);
     /* width: 200px;*/
     height: 100%; 
     border: 1px solid #555;
-    background-color:  mat-color($accent);
+   // background-color:  mat-color($accent);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,14 +16,14 @@ $accent : map-get($custom-theme , accent);
 .subtitle-nav{
     width:100%; 
     height: 60px;
-    background-color: mat-color($accent);;
+  //  background-color: mat-color($accent);;
 }
 .sidenav-container{
         width: auto; 
         float: left;
         height: 100%; 
         border: 1px solid #555;
-        background-color: rgb(129, 129, 129);
+        //background-color: rgb(129, 129, 129);
         flex: 1 1 auto;
         align-items: center;
         flex-direction: row;
@@ -35,16 +35,35 @@ $accent : map-get($custom-theme , accent);
     float: left;
     height: 100%; 
     border: 1px solid #555;
-    background-color: blueviolet;
+   // background-color: blueviolet;
     flex: 1 1 auto;
     align-items: center;
     flex-direction: row;
 }
+.container-div{
+    width: auto; 
+    height: 100%;
+    float: left;
+    padding-right: 15px;
+    //padding-top: 10px;
+    padding-left: 15px;
+    //display: flex;
+    //align-items: center;
+//     width: auto;
+//     //flSSSSSSSSSSSSSSsoat: left;
+//     height: auto; 
+//    // border: 1px solid #555;
+//     background-color: white;
+//     display: flex;
+//     align-items: center;
+//    // justify-content: center;        
+}
+
 .container{
-    width: auto;
-    //float: left;
+    width: 100%;
+    //flSSSSSSSSSSSSSSsoat: left;
     height: auto; 
-    border: 1px solid #555;
+   // border: 1px solid #555;
     background-color: white;
     display: flex;
     align-items: center;
@@ -81,7 +100,7 @@ mat-drawer-container {
     grid-template-columns: 2fr 2fr 2fr;
     grid-column-gap: 10px;
     grid-row-gap: 1em;
-    width: auto;
+    width: 100%;
     /* grid-template-rows: 70px 70px; */
 }
 .box-field-ex{
@@ -110,5 +129,8 @@ mat-drawer-container {
 }
 
 .secondary-text{
-   // background-color: mat-color($primary);
+    padding-top: 15px;
+    padding-left: 21%;
+    //background-color: mat-color($primary);
 }
+
