--- a/frontendSIGUI/src/app/components/angular-components/geodata/tables/table-county/table-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/tables/table-county/table-county.component.html
@@ -1,33 +1,45 @@
-<div class="wrapper-table">
-    <div class="box-table"> 
-        <h3>MUNICIPIO SELEIONADO</h3>
-    </div>
-    <div class="box-table"> 
-        <label >Identificador:</label>
-        <label >{{county.id}}</label>
-    </div>
-    <div class="box-table-l">                  
-        <label >Cod Estado:</label>
-        <label >{{county.id}}</label>
-    </div>   
-    <div class="box-table-r">                  
-        <label >Sigla:</label>
-        <label >01</label>
-    </div>    
-    <div class="box-table"> 
-        <label >Nome:</label>
-        <label >01</label>
-    </div>  
-    <div class="box-table-l">                  
-        <label >Cod IBGE:</label>
-        <label >01</label>
-    </div>   
-    <div class="box-table-r">                  
-        <label >Ambiental:</label>
-        <label >01</label>
-    </div>    
-    <div class="box-table"> 
-        <label >Area:</label>
-        <label >01</label>
-    </div>        
+<div class="div-select">
+<div class="div-s div-title"> 
+    <h3>GERENCIAR MUNICIPIO</h3>
+    <!-- <div class="divider-div header-light-pallete"></div>    -->
 </div>
+<div class="div-s div-img">
+<img [src]="imgLogo" class="img-element" width="128" height="40">
+</div>
+</div>
+<div>
+    <div class="wrapper-table">
+        <div class="box-table color-pallete div-radius"> 
+            <h3>MUNICIPIO SELEIONADO</h3>
+        </div>
+        <div class="box-table color-pallete div-radius"> 
+            <label >Identificador:</label>
+            <label >{{county.id}}</label>
+        </div>
+        <div class="box-table-l color-pallete div-radius">                  
+            <label >Cod Estado:</label>
+            <label >{{county.id}}</label>
+        </div>   
+        <div class="box-table-r color-pallete div-radius ">                  
+            <label >Sigla:</label>
+            <label >01</label>
+        </div>    
+        <div class="box-table color-pallete div-radius"> 
+            <label >Nome:</label>
+            <label >01</label>
+        </div>  
+        <div class="box-table-l color-pallete div-radius">                  
+            <label >Cod IBGE:</label>
+            <label >01</label>
+        </div>   
+        <div class="box-table-r color-pallete div-radius">                  
+            <label >Ambiental:</label>
+            <label >01</label>
+        </div>    
+        <div class="box-table color-pallete div-radius"> 
+            <label >Area:</label>
+            <label >01</label>
+        </div>        
+    </div>
+</div>
+
