--- a/frontendSIGUI/src/app/layout/home-page/home-page.component.html
+++ b/frontendSIGUI/src/app/layout/home-page/home-page.component.html
@@ -27,7 +27,7 @@
     </mat-sidenav>
     <div style="height: 100%;">       
 
-       <app-geo-data></app-geo-data>   
+       <app-geo-data class="component"></app-geo-data>   
     </div>
 
     <!-- <div class="content">
